@@ -13,8 +13,10 @@ abcde 2.5.1 UNRELEASED
   * replace deprecated egrep with grep -E (Closes issue 24)
   * remove -o 0 options from make install (Closes issue 17)
   * clean up indentation on older changelog entries
+  * remove tarball target from Makefile since dir structure
+    has changed now that we use subversion.
 
- -- Colin Tuckley <colint@debian.org>  Wed, 18 Apr 2012 19:54:24 +0100
+ -- Colin Tuckley <colint@debian.org>  Wed, 18 Apr 2012 20:54:24 +0100
 
 abcde 2.5.0
 
